--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </header>
     <main>
         <section>
-            <!--div>div>img(div>p)>-->
+            <!--div*9>div>img(div>p)>-->
             <div>
                 <div>
                     <img src="" alt="">
